# la-capitaine-icon-theme

./: .gitignore  .icon-theme.cache  COPYING  Credits  Credits.md  LICENSE  README.md  Thanks.md  Troubleshooting.md  configure  configure-old  configure-old-old  configure.sh  index.theme  install.sh  meson.build  newconf  original-configure
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: ci.yml
actions/: 22x22
actions/22x22-light/: .directory
apps/scalable/: .directory
devices/: scalable
emblems/scalable/: .directory
emblems/symbolic/: .directory
la-capitaine/: index.theme
la-capitaine-dark/: index.theme
meson/: post_install.py
panel/: 16  24
places/: 16x16
scripts/: ci.sh  fix-icons.sh
status/scalable/: .directory
status/symbolic/: .directory
